initial dark mode changes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,30 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+h1.light-mode {
+  color: text-gray-900
+}
+
+h1.dark-mode {
+  color: text-white-600
+}
+
+a.light-mode {
+  color: text-indigo-700
+}
+
+a.dark-mode {
+  color: #FFF
+}
+
+body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+body.dark-mode {
+  background-color: #1a1919;
+  color: #FFF
+}
+
